css/style.less
@import "sanitize.css";
@import url(https://fonts.googleapis.com/css?family=Raleway:100);

@font-face {
	font-family: 'Noto Sans Japanese';
	font-style: normal;
	font-weight: 400;
	src: local('NotoSansJP-Regular.otf'),
		 url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff2) format('woff2'),
		 url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff) format('woff'),
		 url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.otf) format('opentype');
}

*{
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-weight: 300;
	font-kerning: auto;
	font-family: 'Noto Sans Japanese', sans-serif;
}

body{
	background-color: #ffffff;
}

header{
	background: #50a3a2;
	background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
	position: absolute;
	left:0;
	width:100%;
	height:250px;
	overflow:hidden;

	h1{
		font-family: 'Raleway', sans-serif;
		color: white;
		text-align: center;
		font-size: 46px;
		margin: 40px 0 0;
		word-wrap: break-word;
		overflow-wrap: break-word;
	}
}

.sns{
	display: flex;
	justify-content: center;
	li{
		list-style: none;
		margin: 8px 32px;
	}
}

.circle-button{
	background-color: fade(white, 15%);
	color: #ecf0f1;
	text-align: center;
	line-height: 48px;
	width: 48px;
	height: 48px;
	border: 1px solid fade(white, 30%);
	border-radius: 48px;
	transition: all 0.3s;
	position: absolute;
	z-index: 2;

	&:hover{
		background-color: fade(white, 30%);
	}
}

.bg-bubbles{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	li{
		position: absolute;
		list-style: none;
		display: block;
		width: 40px;
		height: 40px;
		background-color: fade(white, 15%);
		bottom: -160px;
		border-radius: 80px;

		animation: square 25s infinite;
		transition-timing-function: linear;

		&:nth-child(1){left: 10%;}
		&:nth-child(2){left: 20%;width: 80px;height: 80px;animation-delay:2s;animation-duration: 17s;}
		&:nth-child(3){left: 25%;animation-delay:4s;}
		&:nth-child(4){left: 40%;width: 60px;height: 60px;animation-duration: 22s;background-color: fade(white,25%);}
		&:nth-child(5){left: 70%}
		&:nth-child(6){left: 80%;width:120px;height:120px;animation-delay:3s;background-color: fade(white,20%);}
		&:nth-child(7){left: 32%;width:160px;height:160px;animation-delay:7s;}
		&:nth-child(8){left: 55%;width: 20px;height: 20px;animation-delay:15s;animation-duration: 40s;}
		&:nth-child(9){left: 25%;width: 10px;height: 10px;animation-delay:2s;animation-duration: 40s;background-color: fade(white,30%);}
		&:nth-child(10){left:90%;width:160px;height:160px;animation-delay:11s;}
	}
}

a{
	text-decoration: none;
	color: #50a3a2;
	transition: all 0.3s;
	&:hover{
		text-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
	}
}

article{
	position: absolute;
	top: 250px;
	width:100%;
	min-height: 100px;
	box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.2);
}

section{
	width: 80%;
	margin: 40px auto;
	h1{
		font-size: 32px;
		margin: 0;
	}
	p{
		font-size: 16px;
	}
	dl{
		span{
			display: flex;
			span{
				flex-wrap:wrap;
			}
		}
	}
	dt{
		width: 7em;
		font-weight: bold;
	}
	dt:after{
		content: ':';
	}
	dd{
		word-break: keep-all;
	}
	dd + dd:before{
		content: '・';
	}
	meter{
		width: 200px;
		margin: 0 20px;
	}
	ul{
		display: flex;
		flex-wrap: wrap;
		list-style: none;
		li{
			margin-left: 1em;
			p{
				display: inline-block;
				width: 7em;
			}
		}
	}
	section{
		margin: 24px 1em;
		h1{
			font-size: 20px;
			margin: 4px 0;
		}
		p{
			margin-left: 1em;
			font-size: 14px;
		}
	}
}

footer{
	text-align: center;
}

@-webkit-keyframes square {
	0%  {transform: translateY(0);}
	100%{transform: translateY(-500px);}
}
@keyframes square {
	0%  {transform: translateY(0);}
	100%{transform: translateY(-500px);}
}

